;; Generate [StaticVersion] module. The version string must match that in module
;; [Version].  The version itself is set in the "dune-project" file when
;; preparing a distribution.

(rule
 (with-stdout-to StaticVersion.mli
                 (echo "val require_%{version:menhir}: unit\n")))

(rule
 (with-stdout-to StaticVersion.ml
                 (echo "let require_%{version:menhir} = ()\n")))
