;; Generate "version.ml". The version string is defined as an 8-digit version
;; number [XXXXXXXX].  During development, [version] is defined as
;; ["unreleased"]. This must match the name of the variable [version_XXXXXXXX]
;; in the module [StaticVersion]. The version itself is set in the
;; "dune-project" file when preparing a distribution.

(rule
 (with-stdout-to version.ml (echo "let version = \"%{version:menhir}\"\n")))

;; Declare the "menhirSdk" library which consists of all modules in the current
;; directory. Its [ocamlfind] name is "menhir.sdk": Dune requires that all
;; library names be prefixed the the package name, "menhir". To maintain
;; backward compatibility, the next stanza defines a "proxy" package "menhirSdk"
;; with a single dependency on "menhir.sdk".

(library
 (name menhirSdk)
 (public_name menhir.sdk)
 (synopsis "Toolkit for postprocessing Menhir automata (.cmly files)"))

(deprecated_library_name
 (old_public_name menhirSdk)
 (new_public_name menhir.sdk))
